examples/test/testpolicy19241.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19241
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key37: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value22
      podSelector:
        matchLabels:
          key29: value19
          key36: value35
          key15: value36
